# image-enhancement

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  docker-compose.yml
include/: image_enhancement.h
src/: draw_canvas.cpp  enhancer.cpp  remove_boders.cpp
